docs: documentacao com swagger atualizada
